# librero

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  justfile  openapi.json  tailwind.config.js  todo.md
.helix/: languages.toml
client/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/api/: index.ts
client/src/api/models/: AddLibro.ts  Libro.ts
client/src/api/services/: CrateService.ts
e2e/: deno.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: add-books.e2e.ts  view-books.e2e.ts
e2e/utils/: global-setup.ts  test-fixtures.ts
fixtures/: books.sql
migrations/: 20241111234427_create_books_table.sql
scripts/: deploy.fish
server/: Cargo.toml
server/migrations/: 20241017190043_create_libros_table.sql
server/src/: lib.rs  libros.rs  main.rs  testing.rs
server/tests/: e2e.rs
src/: app.rs  lib.rs  main.rs  model.rs  router.rs  testing.rs
src/app/: book_list.rs  book_search.rs  featured_books.rs  header.rs  home.rs  home_page.rs  library.rs  recent_additions.rs  section_card.rs
src/model/: book.rs  open_library.rs
