[package]
name = "librero-server"
version = "0.1.0"
edition = "2021"
default-run = "librero-server"

[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "librero-server"
path = "src/main.rs"

[[bin]]
name = "api-gen"
path = "src/bin/api_gen.rs"
